bin/testsuite/tests/compiler/src/errors/compiler3695.swg
#global testerror "Err0378"
struct A
{
    x:   s32
}

func toto()
{
    var a:               A
    var cccccccccccccccc = &a[1]
    @print(c.x)
}
